crates/claptrap-core/tests/snapshots/tests__arg__hide_long_help-1.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_62231ac3'
[1m[4mUsage:[0m [1mprog[0m [OPTIONS]

[1m[4mOptions:[0m
  [1m-h[0m, [1m--help[0m
          Print help (see a summary with '-h')
EOF_62231ac3
exit 0
