crates/claptrap-core/tests/snapshots/tests__arg__id.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_my-arg-id='file.toml'
