crates/claptrap-core/tests/snapshots/tests__arg__ignore_case-multi.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_option=('TeSt123' 'teST123' 'tESt321')
