crates/claptrap-core/tests/snapshots/tests__arg__ignore_case.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_option='TeSt123'
